<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bottom_sheet_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    style="@style/AppBottomSheetDialogTheme"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bottom_sheet_rectangle"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/btn_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/popular"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/btn_upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/upcoming"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/btn_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/top_rated"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/btn_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/now_playing"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/btn_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/favourite"
        android:textSize="16sp"
        />

</LinearLayout>