<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="@dimen/abc_action_bar_default_height_material"
            app:titleTextColor="#FFFFFF"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/button_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/button_favorite"
                    android:checked="false"
                    android:text=""
                    android:textOff=""
                    android:textOn=""
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>



        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_section_1"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/movie_image"
                    android:layout_width="180dp"
                    android:layout_height="240dp"/>

                <LinearLayout
                    android:id="@+id/layout_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/movie_image"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/movie_title"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text="@string/release_date"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/lorem[50]"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/layout_section_1">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="#ececec" />

                <TextView
                    android:id="@+id/txt_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textSize="20sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/layout_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <include
                        layout="@layout/item_movie_review"/>

                    <!--                <androidx.recyclerview.widget.RecyclerView-->
                    <!--                    android:id="@+id/recycler_review"-->
                    <!--                    android:layout_below="@id/txt_review"-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    tools:listitem="@layout/item_movie_review"-->
                    <!--                    tools:itemCount="1"/>-->

                    <TextView
                        android:id="@+id/btn_see_all_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="12dp"
                        android:text="@string/see_all_reviews"
                        android:textSize="16sp"
                        android:textColor="#0466fd"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_review_empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/review_empty"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="#ececec" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
